<resources>
    <string name="app_name">Story App</string>

    <string name="input_pass">Input your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="upload">Upload</string>
    <string name="password_error_message">Password needs to be min. 8 characters</string>
    <string name="email_error_message">Invalid email format.</string>
    <string name="input_email">Input your email</string>
    <string name="app_desc">Welcome to Story App, where stories are posted. You can also post your stories here.</string>
    <string name="login_desc">Please enter your login credentials to access your account.</string>
    <string name="register_desc">Welcome to Story App. Let\'s begin creating your account to start sharing stories.</string>
    <string name="register_link"><u>Don\'t have any account? Register here.</u></string>
    <string name="login_link"><u>Already have an account? Login here.</u></string>
    <string name="input_name">Input your name</string>
    <string name="login_error">Your input is invalid.</string>
    <string name="reload">Reload</string>
    <string name="logout">Logout</string>
    <string name="log_out_validation">Are you sure you want to log out from this account?</string>
    <string name="exit_validation">You are about to exit the application.</string>
    <string name="exit_app">Exit Application</string>
    <string name="btn_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="login_cancel_desc">Are you sure you want to cancel the login process? Any changes will be lost.</string>
    <string name="regis_cancel_desc">Are you sure you want to cancel the Registration process? Any changes will be lost.</string>
    <string name="login_cancel">Cancel Login</string>
    <string name="regis_cancel">Cancel Registration</string>
    <string name="register_success">Registration Successful</string>
    <string name="register_success_desc">Your new account has been created. Please log in.</string>
    <string name="cancel_story">Cancel adding story?</string>
    <string name="cancel_story_desc">Are you sure you want to cancel adding story?</string>
    <string name="pass_mismatch">Password mismatch!</string>
    <string name="register_error">Your input is invalid or empty. Please check again.</string>
    <string name="name_empty">Name cannot be empty.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="take_photo">Take Photo</string>
    <string name="user_not_found">User not found.</string>
    <string name="email_taken">Email has been used by another account.</string>
    <string name="write_caption">Write your post caption here…</string>
    <string name="post_story">Post Story</string>
    <string name="discard">Discard</string>
    <string name="discard_desc">Go back to camera and discard photo?</string>
    <string name="capture_success">Successfully captured photo</string>
    <string name="capture_failed">Failed to capture photo</string>
    <string name="camera_failed">Failed to launch camera</string>
    <string name="no_permit">Did not get permission.</string>
    <string name="localization">Localization Setting</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="device_setting">Open Device Setting</string>
    <string name="device_setting_validation">You are about to open your device setting.</string>
    <string name="desc_empty">Caption cannot be empty.</string>
</resources>